--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,20 +17,17 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/Theme.NoActionBar">
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name="org.achartengine.GraphicalActivity" />
         <activity
             android:name=".TestingActivity"
-            android:label="@string/title_activity_testing"
             android:parentActivityName=".MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -38,7 +35,6 @@
         </activity>
         <activity
             android:name=".Grid"
-            android:label="@string/title_activity_grid"
             android:parentActivityName=".MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -46,7 +42,6 @@
         </activity>
         <activity
             android:name=".ChordView"
-            android:label="@string/title_activity_chord_view"
             android:parentActivityName=".Grid" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
